<resources>
    <string name="app_name">Sunshine</string>

    <!--Strings for log in-->
    <string name="button_name_sign_up">Sign Up</string>
    <string name="button_name_sign_in">Sign In</string>
    <string name="button_name_sign_out">Sign Out</string>
    <string name="button_name_search">Search</string>
    <string name="edit_text_name">Name</string>
    <string name="edit_text_username">Username</string>
    <string name="edit_text_password">Password</string>
    <string name="go_back">Back</string>
    <string name="edit_text_email">Email</string>
    <string name="button_name_back">Back</string>
    <string name="create_account">Don\'t have account? Sign Up</string>
    <string name="existing_account">Already have account? Sign In</string>


    <!--Content Descriptions-->
    <string name="cd_background_gradient">Gradient for the background of the landing page</string>
    <string name="cd_background_landing">Background for landing page</string>
    <string name="cd_sunshine_logo">Sunshine logo for the landing page</string>
    <string name="cd_button_next">This button will send the user to the next activity</string>
    <string name="cd_button_back">This button will send the user to the previous activity</string>

    <!--Saved Data Keys-->
    <string name="sk_phone_number">savedPhoneNumber</string>
    <string name="sk_full_phone_number">savedFullPhoneNumber</string>

    <!--Intent Extras-->
    <string name="extra_full_phone_number">EXTRA_FULL_PHONE_NUMBER</string>
    <string name="extra_phone_number">EXTRA_PHONE_NUMBER</string>
    <string name="extra_user_name">EXTRA_USER_NAME</string>

    <!-- Other -->
    <string name="recycle_symbol_description">Official Recycle Symbol</string>
    <string name="search_hint">Search...</string>
    <string name="get_started">Get Started</string>
    <string name="onboard_phone_title">What\'s your number?</string>
    <string name="onboard_phone_subtitle">We\'ll text a code to verify your phone</string>
    <string name="onboard_auth_title">What\'s the code?</string>
    <string name="onboard_auth_subtitle">Enter the code sent to:</string>
    <string name="onboard_auth_null_code">Please provide a 6 digit code</string>
    <string name="default_country_code">+233</string>
    <string name="hint_phone_number">050 555 0123</string>
    <string name="resend_code">Resend Code</string>
    <string name="hint_name">Name</string>
    <string name="onboard_name_title">What\'s your name?</string>
    <string name="onboard_terms_title">Do you agree to Sunshine\'s</string>
    <string name="onboard_terms_subtitle"><a href="https://policies.google.com/terms">Terms of Service</a> and <a href="https://policies.google.com/privacy">Privacy Policy</a> ?</string>
    <string name="button_yes">Yes</string>
    <string name="cd_contract_image">Contract image for Terms of Service and Privacy Policy</string>
    <string name="plus">+</string>

    <string name="disposal_prompt">Where does it go?</string>
    <string-array name="disposal_types">
        <item>Garbage</item>
        <item>Recycling</item>
        <item>Food &amp; Yard Waste</item>
        <item>Hazardous</item>
        <item>Other</item>
    </string-array>
    <string name="used_to_call_hotline_when_needed">Used to call Hotline when needed</string>
    <string name="upward_to_sunshine">Upward to Sunshine</string>
    <string name="string_used_to_upload_content">Used to Upload Content</string>
    <string name="Level">Level</string>
    <string name="vibe_check">Vibe Check</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jane Doe</string>
    <string name="nav_header_subtitle">Finding happiness within</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_moments">Moments</string>
    <string name="menu_vibe">Vibe Check</string>
</resources>