<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPageActivity">

    <ImageView
        android:id="@+id/landingPageGradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1.0"
        android:background="@drawable/gradient_landing_page"
        android:contentDescription="@string/cd_background_gradient" />

    <ImageView
        android:id="@+id/wasteBinBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:alpha="0.3"
        android:background="@color/colorSecondary"
        android:contentDescription="@string/cd_background_landing"
        android:padding="10dp" />

    <ImageView
        android:id="@+id/sunshineLogo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cd_sunshine_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/sun_logo_black_500" />

    <Button
        android:id="@+id/lp_button_next"
        android:layout_width="272dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_get_started"
        android:fontFamily="@font/montserrat"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />


</RelativeLayout>