<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboardTermsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface"
    tools:context=".OnboardNumberActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_round_arrow_back_ios_40px"
        android:tint="@android:color/black"
        android:contentDescription="@string/cd_button_back" />

    <LinearLayout
        android:id="@+id/onboardTitleBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/backButton"
        android:layout_below="@id/backButton"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/onboardTermsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/onboard_terms_title"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/onboard_prompt_title_text" />

        <TextView
            android:id="@+id/onboardTermsSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/onboard_terms_subtitle"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/onboard_prompt_subtitle_text"
            android:linksClickable="true"
            android:textColorLink="@color/colorSecondary"/>
    </LinearLayout>

    <ImageView
        android:src="@drawable/contract_yellow_gradient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/onboardTitleBox"
        android:layout_above="@id/nextButton"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/cd_contract_image" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="272dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/button_get_started"
        android:backgroundTint="@color/colorSecondary"
        android:fontFamily="@font/montserrat"
        android:text="@string/button_yes"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDarkText"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>